# rag-service

./: .env.example  .gitignore  Dockerfile  README.md  README_zh.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/api/: __init__.py  auth.py  collections.py  health.py  ingest.py  parse.py  rerank.py  retrieve.py
app/auth/: middleware.py
app/core/: config.py  exceptions.py  logging.py  metrics.py  redact.py  request_context.py  response.py
app/evaluation/: metrics.py
app/middleware/: request_logging.py
app/models/: __init__.py  chunk.py  document.py  query.py
app/parser/: base.py  cleaner.py  markdown_parser.py  pdf_parser.py  text_parser.py
app/retrieval/: dedup.py  dense_searcher.py  embedder.py  hybrid_searcher.py  hyde.py  reranker.py  sparse_searcher.py
app/services/: __init__.py  collection_service.py  health_service.py  ingest_service.py  parse_service.py  rerank_service.py  retrieve_service.py
app/storage/: collection_manager.py  metadata_store.py  qdrant_client.py  version_manager.py
app/ui/: router.py
deploy/: docker-deploy.sh  server-sync.sh
docs/: algorithms.md  api.md  architecture.md  deployment.md  verification.md
tests/: conftest.py
tests/api/: test_collections.py  test_ingest.py  test_parse.py  test_rerank.py  test_retrieve.py  test_ui.py
tests/core/: test_logging.py
tests/evaluation/: test_metrics.py
tests/integration/: conftest.py  test_contract.py  test_degradation.py  test_end_to_end.py
tests/parser/: test_chunker.py  test_layout_table.py  test_mineru.py  (+3 more)
(+35 files in other folders)
